[ASTERIXDB-3668][EXT]: support disableSslVerify + AD auth for parquet
Details:
- Add support to disableSslVerify property
  for all external collection types.
- Add support to AD authentication methods
  for reading parquet.
- Ensure support to Azure Datalake is up to date.
- Remove client certificate authentication as it is
  not commonly used and is not supported by
  hadoop-azure (for reading parquet).

Ext-ref: MB-68900
Change-Id: I969fea94b821c1797ac5f89567a6a79c93410337
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/20545
Reviewed-by: Hussain Towaileb <hussainht@gmail.com>
Tested-by: Hussain Towaileb <hussainht@gmail.com>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>